--- a/app/src/main/res/layout/activity_analise_blton_an.xml
+++ b/app/src/main/res/layout/activity_analise_blton_an.xml
@@ -9,10 +9,13 @@
 
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-98dp"
-        tools:layout_editor_absoluteY="58dp">
+        android:id="@+id/scrollView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -43,22 +46,23 @@
 
             <TableRow>
                 //preencher
+
                 <EditText
                     android:id="@+id/editTextX"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
                     android:layout_marginStart="32dp"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="40dp"
                     android:layout_marginRight="40dp"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     app:layout_constraintEnd_toStartOf="@+id/editTextY"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView"
-                    android:layout_marginLeft="32dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView" />
 
                 <EditText
                     android:id="@+id/editTextY"
@@ -66,17 +70,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="100dp"
+                    android:layout_marginRight="100dp"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.89"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView"
-                    android:layout_marginRight="100dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             </TableRow>
+
             <TableRow>
                 //texto abaixo
 
@@ -84,7 +89,7 @@
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginRight="16dp"
@@ -100,11 +105,11 @@
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginLeft="32dp"
-
+                    android:layout_marginStart="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginEnd="100dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginRight="100dp"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="5"
                     android:text="Soma 3 a 3 sup."
                     android:textColor="#090909"
@@ -115,17 +120,20 @@
 
 
             </TableRow>
+
             <TableRow>
                 //calcular e resultado
+
                 <Button
                     android:id="@+id/button5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginLeft="37dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="50dp"
                     android:layout_marginTop="16dp"
+                    android:layout_weight="10"
                     android:onClick="calcular"
-                    android:layout_weight="5"
+                    android:scaleX="1"
                     android:text="Calcular"
                     app:backgroundTint="#800000"
                     app:layout_constraintStart_toStartOf="parent"
@@ -135,43 +143,47 @@
                     android:id="@+id/editTextResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginLeft="42dp"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginLeft="52dp"
                     android:layout_marginTop="24dp"
-                    android:layout_marginEnd="76dp"
-                    android:layout_marginRight="76dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginRight="72dp"
                     android:ems="10"
-                    android:inputType="textPersonName"
-                    android:textSize="12sp"
+                    android:enabled="false"
+                    android:inputType="none"
+                    android:textColor="#070707"
+                    android:textIsSelectable="true"
+                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/button5"
                     app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
             </TableRow>
+
             <TableRow>
+
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:layout_gravity="end"
+                    android:layout_marginStart="68dp"
+                    android:layout_marginLeft="50dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="28dp"
                     android:layout_marginRight="28dp"
                     android:text="Resultado"
-                    android:layout_marginStart="68dp"
                     android:textColor="#0B0A0A"
                     android:textSize="24sp"
-                    android:layout_gravity="end"
                     app:layout_constraintEnd_toEndOf="@+id/editTextResult"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editTextResult"
-                    android:layout_marginLeft="50dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/editTextResult" />
 
 
             </TableRow>
-
 
 
             <TextView
